<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCaculator</string>
    <string name="action_settings">Settings</string>
    <string name="p10">10%</string>
    <string name="p15">15%</string>
    <string name="p20">20%</string>
    <string name="bill">Bill</string>
    <string name="tip">Tip is:</string>
    <string name="tipPercentage">Tip\'s Percentage:</string>
    <string name="erEnterBill">Please enter the dollar amount for bill.</string>


</resources>